...
          </ThemedText>
        </ThemedView>
        
      {/* Button Section */}
      <ThemedView style={styles.buttonSection}>
        <TouchableOpacity
          testID="welcome-get-started"
          style={styles.getStartedButton}
          activeOpacity={0.8}
          onPress={() => router.push('/(auth)/auth')}
        >
          <ThemedText type="default" style={styles.getStartedText}>
            {t('auth.welcome_page.get_started')}
...
